Integrated "delete" and "search" strategy with the backend.  STILL need to remove the correct strategy from the UI based on the delete response!!!!

--- a/src/components/editor/aq-editor-home-menu.html
+++ b/src/components/editor/aq-editor-home-menu.html
@@ -184,7 +184,8 @@
 					this.$$('#menu-icons').style.display = 'inline';
                 }
                 else if(e.keyCode == 13) {
-                	this.doSearch();
+                	this.fire('search-action',{searchtext:this.$$('#searchbox').value})
+                	
                 }
             },
 
