--- a/src/components/analyze/aq-analyze-backtest-comparison-item.html
+++ b/src/components/analyze/aq-analyze-backtest-comparison-item.html
@@ -53,27 +53,34 @@
 			--vaadin-grid-header-row-height : 78px;
 			--vaadin-grid-row-cell: blue;
 		}
-		
-		
-		
-		.axis_labels{
-			position: absolute;
-			top: 100px;
-			left: 50%;
-			text-align: left;
+		#table_details__comparision{
+			overflow: scroll;width: 100%;
 		}
+		
 		.sub_header{
 			display: flex;justify-content: space-between;
 		}
 		.goBack__text{
 			margin-left: 10px; margin-bottom: 30px;
 		}
+		
+		.vertical-textGraphs {
+			transform: rotate(270deg);
+			margin-right: 900px;
+			margin-top: -400px; 
+
+		}
+		.horizontal-textGraphs {
+			margin-left: 720px ;
+			margin-top: -25px; 
+
+		}
 	</style>
 
 	<template>
 		
 		<div class="goBackButton layout horizontal">
-            <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBack1"></paper-icon-button>
+            <paper-icon-button noink class="self-center" title="Go Back" icon="icons:arrow-back" on-tap="goBackAllBacktests"></paper-icon-button>
             <div class="flex"><h3>Back to Comparision</h3></div>
           </div>
 		<div id='comparison-return'>
@@ -91,79 +98,94 @@
 				</paper-tabs>
 			</div>
 			<iron-ajax auto
-				  id="axax_barGraph"
+				  id="ajaxBarGraph"
 				  url=""
 		          handle-as="json"
-		          on-response="handleResponse1"
-		          >
-		          </iron-ajax>
+		          on-response="handleResponseBarGraph">
+		          
+		    </iron-ajax>
 			<iron-ajax auto
-				  id="axax_lineGraph"
+				  id="ajaxLineGraph"
 				  url=""
 		          handle-as="json"
-		          on-response="handleResponse"
-		          >
-		          </iron-ajax>
+		          on-response="handleResponseLineGraph">
+		          
+		    </iron-ajax>
 		          
 			<iron-pages class="pages_select" selected={{graphType1}}>
-		  		<iron-page>
+				<template is='dom-if'' if="[[lineData]]">
+		  		
+			  		<iron-page>
 
-				<nvd3-line 
-		  			id="chart-line1" 
-		  			class="bar1" 
-		  			height=460
-		  			width=900
-		  			show-legend 
-		  			use-interactive-guideline 
-		  			auto-resize 
-		  			no-data="No Data Available!" 
-		  			data=[[lineData]]>
-		  		</nvd3-line>
-		  		<div class="axis_labels">
-		  			<p><strong>X-Axis:</strong> {{x_lineData}}</p>
-		  		<p><strong>Y-Axis:</strong> {{y_lineData}}</p>
-		  		</div>
-		  		</iron-page>
-		  		<iron-page>
+					<nvd3-line 
+			  			id="chart-line" 
+			  			class="bar1" 
+			  			height=460
+			  			width=900
+			  			show-legend 
+			  			use-interactive-guideline 
+			  			auto-resize 
+			  			no-data="No Data Available!" 
+			  			data=[[lineData]]>
+			  		</nvd3-line>
+			  		<div class="horizontal-textGraphs">
+			  			<p><strong>{{x_lineData}} &#x2192;</strong></p>
+			  			
+			  		</div>
+			  		<div class="vertical-textGraphs">
 
-				<nvd3-multi-bar 
-		  			id="chart-bar" 
-		  			class="bar" 
-		  			height=460
-		  			width=900
-		  			show-legend 
-		  			use-interactive-guideline 
-		  			auto-resize 
-		  			no-data="No Data Available!" 
-		  			data=[[barData]]>
-		  		</nvd3-multi-bar>
-		  		<div class="axis_labels">
-		  			<p><strong>X-Axis:</strong> {{x_barData}}</p>
-		  			<p><strong>Y-Axis:</strong> {{y_barData}}</p>
-		  		</div>
-		  		</iron-page>
+			  				<p><strong>{{y_lineData}} &#x2192;</strong></p>
+			  		</div>
+			  		</iron-page>
+		  		</template>
+				<template is='dom-if'' if="[[barData]]">
+
+			  		<iron-page>
+
+					<nvd3-multi-bar 
+			  			id="chart-bar" 
+			  			class="bar" 
+			  			height=460
+			  			width=900
+			  			show-legend 
+			  			use-interactive-guideline 
+			  			auto-resize 
+			  			no-data="No Data Available!" 
+			  			data=[[barData]]>
+			  		</nvd3-multi-bar>
+			  		<div class="horizontal-textGraphs">
+			  			<p><strong>{{x_barData}} &#x2192;</strong></p>
+			  			
+			  		</div>
+			  		<div class="vertical-textGraphs">
+
+			  				<p><strong>{{y_barData}} &#x2192;</strong></p>
+			  		</div>
+			  		</iron-page>
+				</template>
+
 		  		<iron-page>
-		  		<div style="width:100%">
-		  		<vaadin-grid id="table_details__comparision" style="overflow: scroll;width: 100%">
-				  <table>
-				    <colgroup class="table_style">
-				      <col name="Strategy Name" sortable/>
-				      <col name="Total Return1" sortable/>
-				      <col name="Avg Return" sortable/>
-				      <col name="Avg Volatility" sortable/>
-				      <col name="Sharpe Ratio" sortable/>
-				      <col name="Information Ratio" sortable/>
-				      <col name="Sortino Ratio" sortable/>
-				      <col name="Avg Drawdown" sortable/>
-				      <col name="Max Drawdown" sortable/>
-				      <col name="Calmar Ratio" sortable/>
-				      <col name="Beta Value" sortable/>
-				      <col name="Stability" sortable/>
-				      <col name="Avg Concentration" sortable/>
-				    </colgroup>
-				  </table>
-				</vaadin-grid>
-				</div>
+			  		<div style="width:100%">
+			  		<vaadin-grid id="table_details__comparision">
+					  <table>
+					    <colgroup class="table_style">
+					      <col name="Strategy Name" sortable/>
+					      <col name="Total Return1" sortable/>
+					      <col name="Avg Return" sortable/>
+					      <col name="Avg Volatility" sortable/>
+					      <col name="Sharpe Ratio" sortable/>
+					      <col name="Information Ratio" sortable/>
+					      <col name="Sortino Ratio" sortable/>
+					      <col name="Avg Drawdown" sortable/>
+					      <col name="Max Drawdown" sortable/>
+					      <col name="Calmar Ratio" sortable/>
+					      <col name="Beta Value" sortable/>
+					      <col name="Stability" sortable/>
+					      <col name="Avg Concentration" sortable/>
+					    </colgroup>
+					  </table>
+					</vaadin-grid>
+					</div>
 				</iron-page>
 	  		</iron-pages>
 		</div>
@@ -183,7 +205,7 @@
 			properties:{
 				graphType1: {
 					type:Number,
-					value:1,
+					value:0,
 				},
 				barData: {
 					type: Object,
@@ -202,29 +224,15 @@
 				},
 				y_barData:{
 					type: String,
-				},
+				}
 				
 			},
 			ready: function(){
-				var claims = [];
-				claims.push({
-		            'Total Return1': '14.3%',
-		            'Avg. Return': '3.4%',
-		            'Avg. Volatility': '5.6%',
-		            'Sharpe Ratio': "0.82",
-		            'Information Ratio': "0.5",
-		            'Sortino Ratio': "1.6",
-		            'Avg. Drawdown': "4.5%",
-		            'Max. Drawdown': "5.6%",
-		            'Calmar Ratio': "2.4",
-		            'Beta': "0.98",
-		            'Stability': "0.88",
-		            'Avg. Concentration': "0.52"
-		        });
+				
+				this.$.ajaxBarGraph.url = "http://localhost:8080/src/components/common/data3.json";
 		   //      	
-		        	this.$.axax_lineGraph.url = "http://localhost:8080/src/components/common/data1.json";
-					console.log(this.$.axax_lineGraph.url);
-			        this.$.axax_lineGraph.generateRequest();
+		        	this.$.ajaxLineGraph.url = "http://localhost:8080/src/components/common/data1.json";
+					console.log(this.$.ajaxLineGraph.url);
 			        
 		     //    setTimeout(function(){var grid = document.querySelector('#sort');
 		     //    console.log('claims',claims);
@@ -232,15 +240,13 @@
 		     //    grid.items = claims;
 		    	// },6000);
 			},
-			handleResponse: function(e){
+			handleResponseLineGraph: function(e){
 
 				this.set('lineData',e.detail.response);
 
 				console.log(e.detail.response);
 
-				this.$.axax_barGraph.url = "http://localhost:8080/src/components/common/data3.json";
-				console.log(this.$.axax_barGraph.url);
-		        this.$.axax_barGraph.generateRequest();
+				console.log(this.$.ajaxBarGraph.url);
 		        this.set('x_lineData', e.detail.response[0].x_axis);
 		        this.set('y_lineData', e.detail.response[0].y_axis);
 
@@ -248,7 +254,7 @@
 				
 
 			},
-			handleResponse1: function(e){
+			handleResponseBarGraph: function(e){
 
 				this.set('barData',e.detail.response);
 				console.log(this.barData);
@@ -260,17 +266,16 @@
 				
 
 			},
-			goBack1() {
+			goBackAllBacktests() {
 		          this.fire('backClicked_all');
 		      },
 			handleResponse_grid: function(e){
-				var items1=[];
-				var grid1 = this.$.table_details__comparision;
+				var items =[];
+				var grid = this.$.table_details__comparision;
 
-				var a = e.detail.response.result;
 				console.log(e.detail.response.result.length);
 				for(var i=0; i<e.detail.response.result.length;i++){
-					items1.push({
+					items.push({
 			            'Strategy Name': e.detail.response.result[i].Strategy,
 
 			            'Total Return1': e.detail.response.result[i].Total_Return1,
@@ -288,10 +293,11 @@
 
 			        });
 			        
-			        console.log('items1');
+			        console.log('items');
 				}
-					grid1.items = items1;
-					grid1.frozenColumns = 1;
+					grid.items = items;
+
+					grid.frozenColumns = 1;
 
 
 			}
